// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessageComponent matches snapshot 1`] = `null`;

exports[`ErrorMessageComponent matches snapshot when showEmptyWarning is true 1`] = `
<span
  className="usa-input-error-message"
  role="alert"
>
  Title and definition cannot be blank.
</span>
`;

exports[`ErrorMessageComponent matches snapshot when showResponseError and showEmptyWarning are true 1`] = `
<span
  className="usa-input-error-message"
  role="alert"
>
  Title and definition cannot be blank.
</span>
`;

exports[`ErrorMessageComponent matches snapshot when showResponseError is true 1`] = `
<span
  className="usa-input-error-message"
  role="alert"
>
  error
</span>
`;
